# world-operation

./: .firebaserc  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOY_NOW.md  FIREBASE_SETUP.md  LICENSE  README.md  START.md  deploy.sh  package.json
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
.github/workflows/: ci.yml
backend/: .env.example  Makefile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_migration.py  0002_git_like_fiction_schema.py
backend/app/: main.py
backend/app/api/: branches.py  commits.py  diff.py  entities.py  episodes.py  extract.py  muse.py  provenance.py  relationships.py  repositories.py  scenes.py  sentiment.py  versions.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  entity.py  provenance.py  relationship.py  repository.py  scene.py  story.py
backend/app/schemas/: entity.py  muse.py  relationship.py  repository.py  scene.py  story.py
backend/app/services/: extraction_service.py  generation_service.py  llm_client.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx  AuthWrapper.tsx  BranchBar.tsx  CRUDInterface.tsx  CommandPalette.tsx  ComposerModal.tsx  ContextMenu.tsx  CreateEditModal.tsx  DataDebug.tsx  DebugPanel.tsx  FirebaseTest.tsx  FloatingBottomButton.tsx  FloatingSidebar.tsx  GitEditor.tsx  GitLayout.tsx  GitSidebar.tsx  GitStatusBar.tsx  InlineEdit.tsx  (+21 more)
infra/: .env.example  docker-compose.yml
(+13 files in other folders)
